Updated: every fillDB() now uses saveAll instead of individual save